[package]
name = "app"
version = "1.0.0"
description = "A Tauri App"
authors = ["null"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0.96"
serde = { version = "1.0.164", features = ["derive"] }
tauri = { version = "1.3.0", features = ["api-all", "updater"] }
tokio = { version = "1.29.1", features = ["rt", "signal"] }
reqwest = { version = "0.11.15", features = ["json", "native-tls"] }
walkdir = "2.4.0"
base64 = { version = "0.21.3" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
zip = "0.6.5"
unrar = "0.4.4" # No updates available
sevenz-rust = "0.2.2" # No updates available
lazy_static = "1.4.0" # No updates available
hudsucker = { version = "0.19.2", features = ["rustls-client"] }
rcgen = { version = "0.13.2", features = ["x509-parser"] }
rustls-pemfile = "1.0.2"
sysproxy = "0.2.2"
open = "3.2.0"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
